The application kind of works with a hacked version of AMASE. The 'hacks' are used to circumvent the fact that the C LMCP library does not always work.

--- a/apps/tk1_wm/CMakeLists.txt
+++ b/apps/tk1_wm/CMakeLists.txt
@@ -34,7 +34,12 @@ DeclareCAmkESRootserver(tk1_wm.camkes CPP_FLAGS ${cpp_flags})
 CAmkESAddImportPath(components)
 CAmkESAddImportPath(interfaces)
 
-# Add VM components
+# Add components
 add_subdirectory(components/WM)
 add_subdirectory(components/UART)
+add_subdirectory(components/CLOCK)
 
+
+CAmkESAddImportPath(../../../DARPA-tk1/components)
+CAmkESAddImportPath(../../../DARPA-tk1/includes)
+CAmkESAddImportPath(../../../DARPA-tk1/interfaces)
