--- a/apps/tk1_wm/components/UART/components/UARTSHIM/CMakeLists.txt
+++ b/apps/tk1_wm/components/UART/components/UARTSHIM/CMakeLists.txt
@@ -18,5 +18,5 @@ file(GLOB sources ./src/*.c)
 
 DeclareCAmkESComponent(UARTSHIM
     SOURCES ${sources}
-    INCLUDES
+    INCLUDES ../../include/
 )
